<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@color/colorPrimaryDark"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_user_white_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/email" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end"
        android:layout_gravity="bottom">


        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            tools:text="@string/profile"
            android:textColor="@color/colorPrimaryDark"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>