<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="@dimen/margin_horizontal"
    android:paddingTop="@dimen/margin_vertical"
    android:paddingRight="@dimen/margin_horizontal"
    android:paddingBottom="@dimen/margin_vertical"
    android:background="@drawable/bg_color_login"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="@dimen/image_width_medium_large"
        android:layout_height="@dimen/image_height_medium_large"
        android:scaleType="fitXY"
        android:src="@drawable/ic_apps"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/mail_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/GeneralInputWhiteTheme"
        tools:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_medium_large"
            android:singleLine="true"
            tools:text="asdasdasda"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/GeneralInputWhiteTheme"
        android:layout_marginTop="@dimen/margin_medium"
        app:passwordToggleEnabled="true"
        tools:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/padding_medium_large"
            android:singleLine="true"
            tools:text="asdasdasda"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_medium">

        <com.google.android.material.button.MaterialButton
            android:id="@id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SingleButtonTheme"
            android:backgroundTint="@color/colorPrimaryDark"
            tools:text="@string/login_send"/>

        <ProgressBar
            android:id="@id/progress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_height"
            android:layout_marginTop="-11dp"
            android:visibility="invisible"
            android:indeterminate="true"
            style="?android:attr/progressBarStyleHorizontal" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        style="@style/SingleButtonTheme"
        tools:text="@string/register_send"/>

    <com.google.android.material.button.MaterialButton
        android:id="@id/forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        style="@style/SingleButtonTheme"
        tools:text="@string/forget_password"/>

    <com.google.android.material.button.MaterialButton
        android:id="@id/base_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        style="@style/SingleButtonTheme"
        tools:text="@string/base_url"/>

</androidx.appcompat.widget.LinearLayoutCompat>