<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <View
        android:layout_width="1.5dp"
        android:layout_height="match_parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@id/detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:iconGravity="start"
        android:layout_weight="1"
        tools:text="@string/detail"
        app:icon="@drawable/ic_detail_primary_24dp"
        style="@style/ButtonAdapterTheme"/>

    <View
        android:layout_width="1.2dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"/>

    <com.google.android.material.button.MaterialButton
        android:id="@id/edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:iconGravity="start"
        android:layout_weight="1"
        tools:text="@string/edit"
        app:icon="@drawable/ic_edit_white_24dp"
        style="@style/ButtonAdapterTheme"/>

    <View
        android:layout_width="1.2dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"/>

    <com.google.android.material.button.MaterialButton
        android:id="@id/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:iconGravity="start"
        android:layout_weight="1"
        tools:text="@string/delete"
        app:icon="@drawable/ic_out_primary_24dp"
        style="@style/ButtonAdapterTheme" />

</androidx.appcompat.widget.LinearLayoutCompat>