<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/parent_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CustomMaterialCardAdapter"
    tools:context=".adapter.ApprovalAdapter">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium_large"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@id/image"
            android:layout_width="@dimen/image_width_small"
            android:layout_height="@dimen/image_height_small"
            android:visibility="gone"
            android:layout_alignParentStart="true"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@id/content_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_toEndOf="@id/image"
            android:layout_toStartOf="@id/activation"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="@string/name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/colorPrimaryDark" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                tools:text="@string/address" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@id/activation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/colorPrimaryDark"
            tools:text="@string/activated" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>